develop/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhyolite-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhyolite-api
  template:
    metadata:
      labels:
        app: rhyolite-api
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: api
          image: rhyolite-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: attachments
              mountPath: /data/attachments
          # Configure graceful shutdown
          terminationMessagePolicy: FallbackToLogsOnError
          readinessProbe:
            httpGet:
              path: /healty
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healty
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: attachments
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: rhyolite-api
spec:
  selector:
    app: rhyolite-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
